# storage/api-docs/api-docs.json
@@ -162,6 +162,102 @@
                     }
                 }
             }
+        },
+        "/report/A": {
+            "get": {
+                "tags": [
+                    "4. Reports"
+                ],
+                "summary": "Productos y qu\u00e9 cantidad puede ser alistada desde inventario",
+                "responses": {
+                    "200": {
+                        "description": "1er Informe solicitado"
+                    },
+                    "default": {
+                        "description": "Ha ocurrido un error."
+                    }
+                }
+            }
+        },
+        "/report/B": {
+            "get": {
+                "tags": [
+                    "4. Reports"
+                ],
+                "summary": "Productos que deben ser alistados por transportadores, y a qu\u00e9 transportador le corresponde cada pedido",
+                "responses": {
+                    "200": {
+                        "description": "2do Informe solicitado"
+                    },
+                    "default": {
+                        "description": "Ha ocurrido un error."
+                    }
+                }
+            }
+        },
+        "/report/C": {
+            "get": {
+                "tags": [
+                    "4. Reports"
+                ],
+                "summary": "Productos menos vendidos el d\u00eda 1 de marzo",
+                "responses": {
+                    "200": {
+                        "description": "2do Informe solicitado"
+                    },
+                    "default": {
+                        "description": "Ha ocurrido un error."
+                    }
+                }
+            }
+        },
+        "/report/D": {
+            "get": {
+                "tags": [
+                    "4. Reports"
+                ],
+                "summary": "Dado el Id de un pedido, ver que producos y que cantidad pueden ser alistados segun inventario y cuales abastecidos por proveedores",
+                "responses": {
+                    "200": {
+                        "description": "2do Informe solicitado"
+                    },
+                    "default": {
+                        "description": "Ha ocurrido un error."
+                    }
+                }
+            }
+        },
+        "/report/E": {
+            "get": {
+                "tags": [
+                    "4. Reports"
+                ],
+                "summary": "Calcular el inventario del d\u00eda 2 de marzo, teniendo en cuenta los pedidos despachados el 1 de marzo",
+                "responses": {
+                    "200": {
+                        "description": "2do Informe solicitado"
+                    },
+                    "default": {
+                        "description": "Ha ocurrido un error."
+                    }
+                }
+            }
+        },
+        "/report/F": {
+            "get": {
+                "tags": [
+                    "4. Reports"
+                ],
+                "summary": "Productos m\u00e1s vendidos el d\u00eda 1 de marzo",
+                "responses": {
+                    "200": {
+                        "description": "2do Informe solicitado"
+                    },
+                    "default": {
+                        "description": "Ha ocurrido un error."
+                    }
+                }
+            }
         }
     },
     "definitions": {}
